Add support for JPMS modules (#64)
* switch to in-house annotation processor

* fix naming

* fix semantics of FSABuilder

* add ci compatibility

* add necessary jacoco exclusions

* adjust to latest changes

* adjust to latest changes

* modulize artifacts

* fix compilation and site issues

* only run classpath tests for modules with services

* add explicit module dependencies

* refactor/simplify default visualization provider

* refactor split packages

* typo

* improve/refactor (module) documentation

* adjust to new annotation processors

* adjust to latest changes

* adjust to annotation-processor refactorings

* reorder changelog notes

* fix warnings on visualizer tests

* clarify configuration

* properly handle module definitions in distribution artifacts

* bump mockito version

* adjust to latest changes

* switch to stable release

* adjust to latest changes

* cleanups

* cleanups