@@ -30,7 +30,7 @@ limitations under the License.
 
     <name>AutomataLib :: Visualization :: DOT Visualizer</name>
     <description>
-        This artifact contains a visualization implementation for the GraphVIZ DOT (http://www.graphviz.org/) tool.
+        This artifact provides a visualization implementation based on the GraphVIZ DOT (http://www.graphviz.org/) tool.
     </description>
 
     <dependencies>
@@ -42,10 +42,6 @@ limitations under the License.
         <dependency>
             <groupId>net.automatalib</groupId>
             <artifactId>automata-commons-util</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>net.automatalib</groupId>
-            <artifactId>automata-core</artifactId>
         </dependency>
         <dependency>
             <groupId>net.automatalib</groupId>
@@ -79,6 +75,11 @@ limitations under the License.
         </dependency>
         <dependency>
             <groupId>net.automatalib</groupId>
+            <artifactId>automata-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.automatalib</groupId>
             <artifactId>automata-util</artifactId>
             <scope>test</scope>
         </dependency>
@@ -101,13 +102,16 @@ limitations under the License.
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <awt.toolkit>com.github.caciocavallosilano.cacio.ctc.CTCToolkit</awt.toolkit>
-                        <java.awt.graphicsenv>com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment</java.awt.graphicsenv>
-                        <java.awt.headless>false</java.awt.headless>
-                    </systemPropertyVariables>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-test</id>
+                        <configuration>
+                            <!-- core is only a testing dependency not defined in module-info.java -->
+                            <!-- append to existing argLine to nicely work together with jacoco plugin -->
+                            <argLine>@{argLine} --add-reads=net.automatalib.visualization.dot=net.automatalib.core</argLine>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
